--- a/themes/hugo-ht/layouts/_default/single.html
+++ b/themes/hugo-ht/layouts/_default/single.html
@@ -38,11 +38,10 @@ Table of Contents:
 <div class="body-text list-text">
 {{ .Content | partial "add-header-anchors" }}
 <p style="color:#777;">
-</p>
+{{ default (index $.Site.Params.lang.lastupdate $.Site.Params.defaultLang) (index $.Site.Params.lang.lastupdate $.Section)}} {{ .Lastmod.Format "2006-01-02" }}</p>
 </div>
 <a href="#top"><i class="fa fa-chevron-up" style="font-size: 30px; color: black;"></i></a>
 
 </main>
 
 {{ partial "footer.html" . }}
-
